--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: A site dedicated to Cybersecurity, exploits, and personal projects
 ---
 
 <p>
-Welcome to wesleykent.com, a site unsurprisngly created by someone named Wesley Kent - and that would be me.
+  Welcome to <b>wesleykent.com</b>, a site unsurprisngly created by someone named Wesley Kent - and that would be me.
 <br><br>
 This site documents several exploits I’ve explored primarily through TryHackMe and some with HackTheBox. I’ve also included some links to resources I’ve consistently used in these CTFs, as well as some shameless self-promotion to my side project at <a href="https://fe-moldark.dev">fe-moldark.dev</a>. I’ve also included some projects I’ve made with raspberry pi’s - everything from dashcams, VPN servers and retro game consoles.
 <br><br>
