--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 title: Welcome to wesleykent.com
-subtitle: A site dedicated to Cybersecurity, exploits, and personal projects
+subtitle: A site dedicated to cybersecurity, CTF exploits, and personal projects
 ---
 
 <p>
-  Welcome to <b>wesleykent.com</b>, a site unsurprisngly created by someone named Wesley Kent - and that would be me.
+  Welcome to <b>wesleykent.com</b>, a site unsurprisingly created by someone named Wesley Kent - and that would be me.
 <br><br>
-This site documents several exploits I’ve explored primarily through TryHackMe and some with HackTheBox. I’ve also included some links to resources I’ve consistently used in these CTFs, as well as some shameless self-promotion to my side project at <a href="https://fe-moldark.dev">fe-moldark.dev</a>. I’ve also included some projects I’ve made with raspberry pi’s - everything from dashcams, VPN servers and retro game consoles.
+This site documents several exploits I’ve explored through TryHackMe and HackTheBox. There's some shameless self-promotion to my side project at <a href="https://fe-moldark.dev">fe-moldark.dev</a> where I am working to recreate a childhood game of mine. I’ve also included some projects I’ve made with raspberry pis - everything from dashcams, VPN servers and retro game consoles.
 <br><br>
-Lastly, I claim the title as the one, true Wesley Kent. I will fight for this right. Enjoy browsing around. 
+Enjoy.
 </p>
