--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ subtitle: A site dedicated to cybersecurity, CTF exploits, and personal projects
 ---
 
 <p>
-  Welcome to <b>wesleykent.com</b>, a site unsurprisingly created by someone named Wesley Kent - and that would be me.
+Welcome to <b>wesleykent.com</b>, a site unsurprisingly created by someone named Wesley Kent - and that would be me.
 <br><br>
-This site documents several exploits I’ve explored through TryHackMe and HackTheBox. There's some shameless self-promotion to my side project at <a href="https://fe-moldark.dev">fe-moldark.dev</a> where I am working to recreate a childhood game of mine. I’ve also included some projects I’ve made with raspberry pis - everything from dashcams, VPN servers and retro game consoles.
+This site documents several exploits I’ve explored through TryHackMe and HackTheBox, and a collection of useful notes I've taken along the way. There's some shameless self-promotion to my side project at <a href="https://fe-moldark.dev">fe-moldark.dev</a> where I am working to recreate a childhood game of mine. I’ve also included some projects I’ve made with raspberry pis - everything from dashcams, VPN servers and retro game consoles.
 <br><br>
 Enjoy.
 </p>
