--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found</strong></p>
+  <p><strong>Page not found.</strong></p>
   <p>Congratulations, one of us messed up. I choose to blame you.</p>
 </div>
