--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@ Welcome to <b>wesleykent.com</b>, a site unsurprisingly created by someone named
 This site documents several exploits I’ve explored through TryHackMe and HackTheBox, and some useful tricks I've learned along the way. There's some shameless self-promotion to my side project at <a href="https://fe-moldark.dev">fe-moldark.dev</a> where I am working to completely recreate a favorite childhood game of mine. I’ve also included some projects I’ve made with Raspberry Pis - everything from dashcams, VPN servers and retro game consoles.
 <br><br>
 Enjoy.
+<br><br><br>
+<b>An update on the game console I am designing can be found <a href="/femoldark/gameconsole/">here</a>.</b>
 </p>
