--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@ This site documents several exploits I’ve explored through TryHackMe and HackT
 <br><br>
 Enjoy.
 <br><br><br>
-<b>An update on the game console I am designing can be found <a href="/femoldark/gameconsole/">here</a>.</b>
+<b>**An update on the game console I am designing can be found <a href="/femoldark/gameconsole/">here</a>.**</b>
 </p>
