--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 title: Welcome to wesleykent.com
 subtitle: A site dedicated to cybersecurity, CTF exploits, and personal projects
-hero_image: /assets/bg_4.png
-image: /assets/bg_4.png
-hero_height: is-large
+hero_image: /assets/bg_7.jpg
+image: /assets/bg_7.jpg
+//hero_height: is-large
 hero_darken: true
 ---
 
