--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@ hero_darken: true
 ---
 
 <p>
-Welcome to <b>wesleykent.com</b>, a site unsurprisingly created by someone named Wesley Kent - and that's me.
+"Hello there" - If you've made it to this corner of the interweb, then welcome.
 <br><br>
-This site documents several exploits I’ve explored through TryHackMe and HackTheBox, and some useful tricks I've learned along the way. There's some shameless self-promotion to my side project at <a href="https://fe-moldark.dev">fe-moldark.dev</a> where I am working to completely recreate a favorite childhood game of mine. I’ve also included some projects I’ve made with Raspberry Pis - everything from dashcams, VPN servers and retro-gaming machines. Lastly, there are pages for USB injectors I've written and the game console I am designing with Matter Control.
+This site documents several exploits I’ve explored through TryHackMe and HackTheBox, and some useful tricks I've learned along the way. There's some shameless self-promotion to my side project at <a href="https://fe-moldark.dev">fe-moldark.dev</a> where I am working to completely recreate a favorite childhood game of mine. I’ve also included some projects I’ve made with Raspberry Pis - everything from dashcams, VPN servers and retro-gaming machines. Lastly, there are pages for USB injectors I've written, the game console I am designing with Matter Control, and some scripts you might find useful.
 <br><br>
-Enjoy.
+Enjoy,
+<br><br>
+<em>-Wesley Kent</em>
 <br><br><br>
-<b>**An update on the game console I am designing can be found <a href="/femoldark/gameconsole/">here</a>.**</b>
 </p>
