--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@ This site documents several exploits I’ve explored through TryHackMe and HackT
 <br><br>
 Enjoy,
 <br><br>
-<em><b>-Wesley Kent</b></em>
+<em>-Wesley Kent</em>
 <br><br><br>
 </p>
