--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ hero_darken: true
 ---
 
 <p>
-"Hello there" - If you've made it to this corner of the interweb, then welcome.
+"Hello there" - If you've made it to this corner of the internet, then welcome.
 <br><br>
 This site documents several exploits I’ve explored through TryHackMe and HackTheBox, and some useful tricks I've learned along the way. There's some shameless self-promotion to my side project at <a href="https://fe-moldark.dev">fe-moldark.dev</a> where I am working to completely recreate a favorite childhood game of mine. I’ve also included some projects I’ve made with Raspberry Pis - everything from dashcams, VPN servers and retro-gaming machines. Lastly, there are pages for USB injectors I've written, the game console I am designing with Matter Control, and some scripts you might find useful.
 <br><br>
