Game console update

--- a/index.html
+++ b/index.html
@@ -16,4 +16,6 @@ Enjoy,
 <br><br>
 <em>-Wesley Kent</em>
 <br><br><br>
+<b>**An update to the game console can be found <a href="https://wesleykent.com/femoldark/gameconsole/">here</a>.**<b>
+<br><br>
 </p>
