--- a/404.html
+++ b/404.html
@@ -19,7 +19,10 @@ layout: default
 
 <div class="container">
   <h1>404</h1>
-
   <p><strong>Page not found</strong></p>
-  <p>Congratulations, one of us messed up. I choose to blame you.</p>
+  <p><br>Congratulations, one of us messed up. I choose to blame you.<br><br></p>
+
+  <center>
+    <div class="tenor-gif-embed" data-postid="10542978" data-share-method="host" data-aspect-ratio="2.35294" data-width="50%"><a href="https://tenor.com/view/harrison-ford-nothing-shoulder-shrug-gif-10542978">Harrison Ford Nothing GIF</a>from <a href="https://tenor.com/search/harrison+ford-gifs">Harrison Ford GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  </center>
 </div>
