--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 title: Welcome to wesleykent.com
 subtitle: A site dedicated to cybersecurity, CTF exploits, and personal projects
-hero_image: /assets/bg_7.jpg
-image: /assets/bg_7.jpg
+hero_image: /assets/bg8.png
+image: /assets/bg8.png
 hero_darken: true
 ---
 
