--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@ layout: default
 
 <div class="container">
   <h1>404</h1>
-  <p><strong>Page not found</strong></p>
+  <p><strong>Page not found.</strong></p>
   <p><br>Congratulations, one of us messed up. I choose to blame you.<br><br></p>
 
   <center>
