--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: CTF Exploits
+title: CTFs from TryHackMe and Hack The Box
 subtitle: The "blog" part of this site, although I hesitate to call it such
 ---
 <h0><font size="+2"><strong>Highlighted Post:</strong></font></h0>
