--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Welcome to wesleykent.com
-subtitle: A site dedicated to cybersecurity, CTF exploits, and personal projects
+subtitle: A site dedicated to cybersecurity, CTFs, and random personal projects
 hero_image: /assets/bg10.png
 image: /assets/bg10.png
 hero_darken: true
@@ -10,7 +10,7 @@ hero_darken: true
 <p>
 "Hello there" - If you've made it to this corner of the internet, then welcome.
 <br><br>
-This site documents several exploits I’ve explored through TryHackMe and HackTheBox, and some useful tricks I've learned along the way. There's some shameless self-promotion to my side project at <a href="https://fe-moldark.dev" target="_blank" rel="noopener noreferrer">fe-moldark.dev</a> where I am working to completely recreate a favorite childhood game of mine. I’ve also included some projects I’ve made with Raspberry Pis - everything from dashcams, VPN servers and retro-gaming machines. Lastly, there are pages for USB injectors and ciphers I've written, the game console I am designing with Matter Control, and some scripts you might find useful.
+This site documents several exploits I’ve explored through TryHackMe and Hack The Box, and some useful tricks I've learned along the way. There's some shameless self-promotion to my side project at <a href="https://fe-moldark.dev" target="_blank" rel="noopener noreferrer">fe-moldark.dev</a> where I am working to completely recreate Fire Emblem. I’ve also included some projects I’ve made with Raspberry Pis and electronics - everything from dashcams, VPN servers and retro-gaming machines. Lastly, there are pages for network intrusion stuff you can set up and configure yourself, the game console I designed, printed, and assembled from scratch, and some random scripts you might find useful.
 <br><br>
 Enjoy,
 <br><br>
